# Halide_CMake_Demo

./: .clang-format  .gitignore  CMakeLists.txt  README.md  add_sub_with_folder.cmake  generator.cpp  generator_test.cpp  rgb_interleaved.cpp  test.cpp  test_blur.cpp  test_halide.cpp
halide_add/: CMakeLists.txt  add.cpp  add.h  add_gen.cpp
halide_blur/: CMakeLists.txt  blur.cpp  blur.h  blur_gen.cpp
halide_blur2/: CMakeLists.txt  blur.cpp  blur.h  blur_gen.cpp
halide_rt/: CMakeLists.txt  rt_gen.cpp
